# FreeRDP

client/Qt/: CMakeLists.txt  main.cpp  qrdpdef.h  qrdpwidget.cpp  qrdpwidget.h  qrdpwork.cpp  qrdpwork.h
